--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@prisma/adapter-mariadb": "^7.0.0",
     "@prisma/client": "^6.19.0",
+    "@supabase/supabase-js": "^2.87.1",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "react": "^19.2.0",
